--- a/multiple_config.json
+++ b/multiple_config.json
@@ -1,6 +1,6 @@
 [
   {
-    "remarks": "ServLess frag tlshello",
+    "remarks": "pooriaServLess frag tlshello",
     "log": {
       "access": "",
       "error": "",
@@ -168,7 +168,7 @@
     "stats": {}
   },
   {
-    "remarks": "ServLess frag 1-1",
+    "remarks": "pooriaServLess frag 1-1",
     "log": {
       "access": "",
       "error": "",
